added cover photo

--- a/buying_tips.html
+++ b/buying_tips.html
@@ -167,7 +167,7 @@
       </div>
     </nav>
 
-    <header class="masthead" style="background-image: url('images/CT_exterior_9_web.jpg')">
+    <header class="masthead" style="background-image: url('images/buying-tips.jpg')">
       <div class="container position-relative px-4 px-lg-5">
         <div class="row gx-4 gx-lg-5 justify-content-center">
           <div class="col-md-11 col-lg-9 col-xl-8">
