--- a/things_to_avoid.html
+++ b/things_to_avoid.html
@@ -106,11 +106,11 @@
                             <a class="nav-link" href="index.html">Home</a>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button"
+                            <a class="nav-link dropdown-toggle active" data-bs-toggle="dropdown" href="#" role="button"
                                 aria-expanded="false">Buyers</a>
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="buying_tips.html">Buying Tips</a></li>
-                                <li><a class="dropdown-item" href="things_to_avoid.html">Things to avoid</a></li>
+                                <li><a class="dropdown-item active" href="things_to_avoid.html">Things to avoid</a></li>
                                 <li><a class="dropdown-item" href="home_maintenance.html">Home Maintenance</a></li>
                                 <li><a class="dropdown-item" href="first_time_home_buyer.html">First time Home Buyer</a>
                                 </li>
@@ -120,9 +120,9 @@
                             <a class="nav-link dropdown-toggle active" data-bs-toggle="dropdown" href="#" role="button"
                                 aria-expanded="false">Sellers</a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item active" href="home_Selling_tips.html">Home Selling Tips</a>
+                                <li><a class="dropdown-item" href="home_Selling_tips.html">Home Selling Tips</a>
                                 </li>
-                                <li><a class="dropdown-item" href="things_to_avoid.html">Things to avoid</a></li>
+                                <li><a class="dropdown-item active" href="things_to_avoid.html">Things to avoid</a></li>
                                 <li><a class="dropdown-item" href="home_staging.html">Importance of Home Staging</a>
                                 </li>
                                 <li><a class="dropdown-item" href="evalution.html">Home Evaluation</a></li>
@@ -171,7 +171,7 @@
             </div>
         </nav>
 
-         <header class="masthead" style="background-image: url('images/CT_exterior_9_web.jpg')">
+         <header class="masthead" style="background-image: url('images/things-to-avoid.jpg')">
              <div class="container position-relative px-4 px-lg-5">
                  <div class="row gx-4 gx-lg-5 justify-content-center">
                      <div class="col-md-11 col-lg-9 col-xl-8">
