--- a/evalution.html
+++ b/evalution.html
@@ -122,7 +122,8 @@
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="home_Selling_tips.html">Home Selling Tips</a></li>
                                 <li><a class="dropdown-item" href="things_to_avoid.html">Things to avoid</a></li>
-                                <li><a class="dropdown-item" href="home_staging.html">Importance of Home Staging</a>
+                                <li><a class="dropdown-item" href="home_staging.html">Importance of Home
+                                        Staging</a>
                                 </li>
                                 <li><a class="dropdown-item active" href="evalution.html">Home Evaluation</a></li>
                             </ul>
@@ -134,7 +135,7 @@
                                 <li><a class="dropdown-item" href="social_media.html">Social Media Presence</a></li>
                                 <li><a class="dropdown-item" href="hire_me.html">Why Hire Me</a></li>
                                 <li><a class="dropdown-item" href="reviews.html">Reviews</a></li>
-                                <li><a class="dropdown-item" href="mortgage_calculator.html">Mortgage Calculator</a>                                    
+                                <li><a class="dropdown-item" href="mortgage_calculator.html">Mortgage Calculator</a>
                                 </li>
                                 <li><a class="dropdown-item" href="services.html">Services</a></li>
                                 <li>
@@ -171,7 +172,7 @@
             </div>
         </nav>
 
-        <header class="masthead" style="background-image: url('images/CT_exterior_9_web.jpg')">
+        <header class="masthead" style="background-image: url('images/home-evaluation.jpg')">
             <div class="container position-relative px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-11 col-lg-9 col-xl-8">
@@ -275,8 +276,6 @@
         </article>
     </div>
 
-    
-
 
 
     <!--**************************************Bottom Container**************************************************-->
@@ -296,17 +295,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
-    </script>
-    <!-- Start of HubSpot Embed Code -->
-    <script type="text/javascript" id="hs-script-loader" async defer src="//js.hs-scripts.com/20507752.js"></script>
-    <!-- End of HubSpot Embed Code -->
-    <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/shell.js"></script>
-    <script>
-        hbspt.forms.create({
-            region: "na1",
-            portalId: "20507752",
-            formId: "a5875a54-a632-4876-a440-cbb5711fa96c"
-        });
     </script>
 </body>
 
