--- a/contact.html
+++ b/contact.html
@@ -210,7 +210,15 @@
         </div>
         <div class="col-lg-4 form-section">
           <h2>Let's Stay Connected</h2>
-          <form action="https://getform.io/f/73d0fac4-c91c-42ae-bace-18a9a2113612" method="POST">
+             <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/shell.js"></script>
+             <script>
+               hbspt.forms.create({
+                 region: "na1",
+                 portalId: "20507752",
+                 formId: "a5875a54-a632-4876-a440-cbb5711fa96c"
+               });
+             </script>
+          <!-- <form action="https://getform.io/f/73d0fac4-c91c-42ae-bace-18a9a2113612" method="POST">
             <div class="w-40">
               <label for="exampleFormControlInput1" class="form-label">Name</label>
               <input type="text" name="name" class="form-control" id="exampleFormControlInput1" placeholder="Your Name">
@@ -224,7 +232,7 @@
               <textarea type="text" name="message" class="form-control" id="exampleFormControlTextarea1" rows="4" placeholder="Your message..."></textarea>
             </div>
             <button type="submit" class="btn btn-lg btn-secondary">Send</button>
-          </form>
+          </form> -->
         </div>
       </div>
 
