--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,10 @@
   </script>
   <script>
     window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
+
+    function gtag() {
+      dataLayer.push(arguments);
+    }
     gtag('js', new Date());
 
     gtag('config', 'UA-207251914-1');
@@ -32,13 +35,15 @@
   <link rel="icon" href="images\Malav.ico">
 
   <!-- Bootstrap 5 CSS link -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
   <!-- This link is for google fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=PT+Serif&family=Sacramento&family=Slabo+27px&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=PT+Serif&family=Sacramento&family=Slabo+27px&display=swap"
+    rel="stylesheet">
 
   <!-- This link is to use Social Media account logos -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -64,14 +69,14 @@
     chatbox.setAttribute("page_id", "108068657814448");
     chatbox.setAttribute("attribution", "biz_inbox");
 
-    window.fbAsyncInit = function() {
+    window.fbAsyncInit = function () {
       FB.init({
         xfbml: true,
         version: 'v11.0'
       });
     };
 
-    (function(d, s, id) {
+    (function (d, s, id) {
       var js, fjs = d.getElementsByTagName(s)[0];
       if (d.getElementById(id)) return;
       js = d.createElement(s);
@@ -122,13 +127,13 @@
               </ul>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="About_Me\about.html"
-                role="button" aria-expanded="false">About Me</a>
+              <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="About_Me\about.html" role="button"
+                aria-expanded="false">About Me</a>
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="social_media.html">Social Media Presence</a></li>
                 <li><a class="dropdown-item" href="hire_me.html">Why Hire Me</a></li>
                 <li><a class="dropdown-item" href="reviews.html">Reviews</a></li>
-                <li><a class="dropdown-item" href="mortgage_calculator.html">Mortgage Calculator</a>                  
+                <li><a class="dropdown-item" href="mortgage_calculator.html">Mortgage Calculator</a>
                 </li>
                 <li><a class="dropdown-item" href="services.html">Services</a></li>
                 <li>
@@ -210,26 +215,19 @@
         </div>
         <div class="col-lg-4 form-section">
           <h2>Let's Stay Connected</h2>
-             <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/shell.js"></script>
-             <script>
-               hbspt.forms.create({
-                 region: "na1",
-                 portalId: "20507752",
-                 formId: "13d54a5b-bebf-4f12-94ed-6c4f3a2754e0"
-               });
-             </script>
+          <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/shell.js"></script>
+          <script>
+            hbspt.forms.create({
+              region: "na1",
+              portalId: "20507752",
+              formId: "13d54a5b-bebf-4f12-94ed-6c4f3a2754e0"
+            });
+          </script>
         </div>
       </div>
 
     </div>
   </div>
-
-
-
-
-
-
-
 
   <!--**************************************Bottom Container**************************************************-->
   <div class="bottom-container">
@@ -245,7 +243,7 @@
   <!-- The Javascript can be moved to the end of the html page before the </body> tag -->
   <script type="text/javascript">
     /* curator-feed-default-feed-layout */
-    (function() {
+    (function () {
       var i, e, d = document,
         s = "script";
       i = d.createElement("script");
@@ -256,7 +254,9 @@
     })();
   </script>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
+  </script>
 </body>
 
 </html>
