--- a/market_update.html
+++ b/market_update.html
@@ -129,13 +129,12 @@
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle active" data-bs-toggle="dropdown"
-                                href="About_Me\about.html"
-                                role="button" aria-expanded="false">About Me</a>
+                                href="About_Me\about.html" role="button" aria-expanded="false">About Me</a>
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="social_media.html">Social Media Presence</a></li>
                                 <li><a class="dropdown-item" href="hire_me.html">Why Hire Me</a></li>
                                 <li><a class="dropdown-item" href="reviews.html">Reviews</a></li>
-                                <li><a class="dropdown-item" href="mortgage_calculator.html">Mortgage Calculator</a>                                    
+                                <li><a class="dropdown-item" href="mortgage_calculator.html">Mortgage Calculator</a>
                                 </li>
                                 <li><a class="dropdown-item" href="services.html">Services</a></li>
                                 <li>
@@ -270,7 +269,7 @@
                             &middot; Images by
                             <a href="https://www.flickr.com/photos/nasacommons/">NASA on The Commons</a>
                         </p>
-                        
+
                         <div class="stats">
                             <h2 class="section-heading">Kitchener-Waterloo Median Sale Price</h2>
                             <div class="d-flex justify-content-center .d-none ">
@@ -303,17 +302,17 @@
                             <h2 class="section-heading">More Stats from KWAR</h2>
                             <div class="d-flex justify-content-center .d-none ">
                                 <iframe id="kwar-stat" id="home-for-sale" scrolling="yes" style="border: 0;" width="350"
-                                    height="500" src="https://kwar.ca/tag/stats/" ></iframe>
+                                    height="500" src="https://kwar.ca/tag/stats/"></iframe>
                             </div>
                         </div>
-                                             
+
                     </div>
                 </div>
             </div>
         </article>
     </div>
 
- 
+
     <!--**************************************Bottom Container**************************************************-->
     <div class="bottom-container">
         <a href="https://www.remaxtwincity.ca/agent/malav-panchal">
