removed curator code

--- a/contact.html
+++ b/contact.html
@@ -179,7 +179,7 @@
     <div class="contact-page-container">
       <div class="row">
         <div class="col">
-          <h1>Let's Connect</h1>
+          <h1>Let's Connect llll</h1>
         </div>
       </div>
 
@@ -238,21 +238,6 @@
     <a href="tel:+16477084395" class="fa fa-mobile"></a>
     <p class="copyright">© 2022 Malav Panchal.</p>
   </div>
-
-
-  <!-- The Javascript can be moved to the end of the html page before the </body> tag -->
-  <script type="text/javascript">
-    /* curator-feed-default-feed-layout */
-    (function () {
-      var i, e, d = document,
-        s = "script";
-      i = d.createElement("script");
-      i.async = 1;
-      i.src = "https://cdn.curator.io/published/cb8b5963-937c-49e8-9271-4b677610e3f3.js";
-      e = d.getElementsByTagName(s)[0];
-      e.parentNode.insertBefore(i, e);
-    })();
-  </script>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
