added medium map

--- a/contact.html
+++ b/contact.html
@@ -179,7 +179,7 @@
     <div class="contact-page-container">
       <div class="row">
         <div class="col">
-          <h1>Let's Connect llll</h1>
+          <h1>Let's Connect</h1>
         </div>
       </div>
 
@@ -209,9 +209,9 @@
 
       <div id="contact-us-row" class="row top-buffer">
         <div class="col-lg-7 d-flex align-items-center justify-content-center">
-          <iframe id="map-on-contact-us"
-            src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11581.201124170786!2d-80.4786241!3d43.4752034!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x6bf6fc8066fca2dd!2sReal%20Estate%20by%20Malav!5e0!3m2!1sen!2sca!4v1630525120225!5m2!1sen!2sca"
-            width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2895.8725905492474!2d-80.52932088456926!3d43.46325707912822!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882bf3788e65c45f%3A0x6bf6fc8066fca2dd!2sMalav%20Panchal%2C%20Realtor%C2%AE%20-%20Re%2FMax%20Twin%20City%20Realty!5e0!3m2!1sen!2sca!4v1642816895149!5m2!1sen!2sca"
+            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </div>
         <div class="col-lg-4 form-section">
           <h2>Let's Stay Connected</h2>
