remove hubsport logo

--- a/contact.html
+++ b/contact.html
@@ -179,7 +179,7 @@
     <div class="contact-page-container">
       <div class="row">
         <div class="col">
-          <h1>Let's Connect</h1>
+          <h1>Let's Connect lol</h1>
         </div>
       </div>
 
