--- a/contact.html
+++ b/contact.html
@@ -179,7 +179,7 @@
     <div class="contact-page-container">
       <div class="row">
         <div class="col">
-          <h1>Let's Connect haha</h1>
+          <h1>Let's Connect</h1>
         </div>
       </div>
 
@@ -242,6 +242,11 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
   </script>
+     <!-- Start of HubSpot Embed Code -->
+     <script type="text/javascript" id="hs-script-loader" async defer src="//js.hs-scripts.com/20507752.js"></script>
+     <!-- End of HubSpot Embed Code -->
+     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+     <script src="javascript\index.js" charset="utf-8"></script>
 </body>
 
 </html>
