disable bootstrip javascript

--- a/business_card.html
+++ b/business_card.html
@@ -35,13 +35,15 @@
   <link rel="icon" href="images\Malav.ico">
 
   <!-- Bootstrap 5 CSS link -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
   <!-- This link is for google fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=PT+Serif&family=Sacramento&family=Slabo+27px&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=PT+Serif&family=Sacramento&family=Slabo+27px&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
 
@@ -72,14 +74,14 @@
     chatbox.setAttribute("page_id", "108068657814448");
     chatbox.setAttribute("attribution", "biz_inbox");
 
-    window.fbAsyncInit = function() {
+    window.fbAsyncInit = function () {
       FB.init({
         xfbml: true,
         version: 'v11.0'
       });
     };
 
-    (function(d, s, id) {
+    (function (d, s, id) {
       var js, fjs = d.getElementsByTagName(s)[0];
       if (d.getElementById(id)) return;
       js = d.createElement(s);
@@ -115,7 +117,8 @@
 
     <div class="row justify-content-evenly save-contact">
       <a class="btn btn-dark btn-lg col-5 bc-button" href="images\malav-vcard.vcf" role="button">SAVE CONTACT</a>
-      <button type="button" class="btn btn-danger btn-lg col-5 bc-button" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-whatever="XXX">CONNECT</button>
+      <button type="button" class="btn btn-danger btn-lg col-5 bc-button" data-bs-toggle="modal"
+        data-bs-target="#exampleModal" data-bs-whatever="XXX">CONNECT</button>
 
 
       <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -130,15 +133,18 @@
               <div class="modal-body">
                 <div class="w-40 mb-3">
                   <label for="exampleFormControlInput1" class="form-label">Name</label>
-                  <input type="text" name="name" class="form-control" id="exampleFormControlInput1" placeholder="Your Name">
+                  <input type="text" name="name" class="form-control" id="exampleFormControlInput1"
+                    placeholder="Your Name">
                 </div>
                 <div class="mb-3">
                   <label for="exampleFormControlInput1" class="form-label">Email address</label>
-                  <input type="email" name="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+                  <input type="email" name="email" class="form-control" id="exampleFormControlInput1"
+                    placeholder="name@example.com">
                 </div>
                 <div class="mb-3">
                   <label for="exampleFormControlTextarea1" class="form-label">Message</label>
-                  <textarea type="text" name="message" class="form-control" id="exampleFormControlTextarea1" rows="4" placeholder="Your message..."></textarea>
+                  <textarea type="text" name="message" class="form-control" id="exampleFormControlTextarea1" rows="4"
+                    placeholder="Your message..."></textarea>
                 </div>
               </div>
 
@@ -178,7 +184,8 @@
         </a>
       </div>
       <div class="col-3  d-flex justify-content-center bc-icon">
-        <a href="https://api.whatsapp.com/send?phone=16477084395&fbclid=IwAR2XTAOAlZdwc0sTbDoxU7Dr_Fnbr5B_zatjztiW1S6z01JpPQ6BpVzjFMA">
+        <a
+          href="https://api.whatsapp.com/send?phone=16477084395&fbclid=IwAR2XTAOAlZdwc0sTbDoxU7Dr_Fnbr5B_zatjztiW1S6z01JpPQ6BpVzjFMA">
           <img src="images\icons\Whatsapp.png" alt="whatsapp">
         </a>
       </div>
@@ -216,7 +223,8 @@
     </div>
     <hr style="margin:0px 0px 10px 80px">
 
-    <a class="btn btn-dark btn-lg col-12 bc-big-save-contact-button wiggle" href="images\malav-vcard.vcf" role="button">SAVE CONTACT</a>
+    <a class="btn btn-dark btn-lg col-12 bc-big-save-contact-button wiggle" href="images\malav-vcard.vcf"
+      role="button">SAVE CONTACT</a>
   </div>
 
   <div class="bc-review">
@@ -224,8 +232,10 @@
     <h3>Leave a Review <img src="images\icons\review.png" alt="review" style="width:35px"> </h3>
     <h6>It will take less than a minute😃</h6>
     <div class="row justify-content-evenly save-contact py-4">
-      <a class="btn btn-light btn-lg col-5 send-review" href="https://g.page/r/Cd2i_GaA_PZrEAo/review" role="button"><img class="review" src="images\Google-Logo.png" alt="google-review">⭐⭐⭐⭐⭐</a>
-      <a class="btn btn-light btn-lg col-5 send-review" href="https://www.facebook.com/realtormalav/" role="button"><img class="review" src="images\Facebook-Logo.png" alt="facebook-review">⭐⭐⭐⭐⭐</a>
+      <a class="btn btn-light btn-lg col-5 send-review" href="https://g.page/r/Cd2i_GaA_PZrEAo/review"
+        role="button"><img class="review" src="images\Google-Logo.png" alt="google-review">⭐⭐⭐⭐⭐</a>
+      <a class="btn btn-light btn-lg col-5 send-review" href="https://www.facebook.com/realtormalav/" role="button"><img
+          class="review" src="images\Facebook-Logo.png" alt="facebook-review">⭐⭐⭐⭐⭐</a>
     </div>
   </div>
 
@@ -238,7 +248,9 @@
     <p class="copyright">© 2022 Malav Panchal.</p>
   </div>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+  <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
+  </script> -->
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="javascript\wiggle.js" charset="utf-8"></script>
