--- a/hire_me.html
+++ b/hire_me.html
@@ -178,7 +178,7 @@
     <div class="about-page-container">
       <div class="row align-items-center">
         <div class="col about-pic" style="text-align: center">
-          <img class="rounded " id="about-pic" src="images\about-photo.jpg" alt="about-pic">
+          <img class="rounded " id="about-pic" src="images\about-photo.webp" alt="about-pic">
         </div>
         <div class="col px-5">
           <h2>MALAV PANCHAL</h2>
@@ -213,7 +213,7 @@
         </div>
       </div>
       <div class="col img-fluid" style="text-align: right" ;>
-        <img class="value-pic" src="images\value.jpg" alt="value-pic">
+        <img class="value-pic" src="images\value.webp" alt="value-pic">
       </div>
     </div>
   </div>
