--- a/buying_tips.html
+++ b/buying_tips.html
@@ -167,7 +167,7 @@
       </div>
     </nav>
 
-    <header class="masthead" style="background-image: url('images/buying-tips.jpg')">
+    <header class="masthead" style="background-image: url('images/buying-tips.webp')">
       <div class="container position-relative px-4 px-lg-5">
         <div class="row gx-4 gx-lg-5 justify-content-center">
           <div class="col-md-11 col-lg-9 col-xl-8">
@@ -225,7 +225,7 @@
               marble, the most beautiful you can imagine. That beautiful, warm, living object looked so fragile, so
               delicate, that if you touched it with a finger it would crumble and fall apart. Seeing this has to change
               a man.</p>
-            <a href="#!"><img class="img-fluid" src="images\invest.jpg" alt="..." /></a>
+            <a href="#!"><img class="img-fluid" src="images\invest.webp" alt="..." /></a>
             <span class="caption text-muted">To go places and do things that have never been done before – that’s what
               living is all about.</span>
             <p>Space, the final frontier. These are the voyages of the Starship Enterprise. Its five-year mission: to
