--- a/first_time_home_buyer.html
+++ b/first_time_home_buyer.html
@@ -173,7 +173,7 @@
             </div>
         </nav>
 
-        <header class="masthead" style="background-image: url('images/first-time-home-buyer.jpg')">
+        <header class="masthead" style="background-image: url('images/first-time-home-buyer.webp')">
             <div class="container position-relative px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-11 col-lg-9 col-xl-8">
@@ -253,7 +253,7 @@
                             delicate, that if you touched it with a finger it would crumble and fall apart. Seeing this
                             has to change
                             a man.</p>
-                        <a href="#!"><img class="img-fluid" src="images/invest.jpg" alt="..." /></a>
+                        <a href="#!"><img class="img-fluid" src="images/invest.webp" alt="..." /></a>
                         <span class="caption text-muted">To go places and do things that have never been done before –
                             that’s what
                             living is all about.</span>
