--- a/services.html
+++ b/services.html
@@ -196,13 +196,13 @@
       <div class="row justify-content-center">
         <div class="col-lg-4">
           <h2>Buy & Sell</h2>
-          <img class="buy-sell" src="images\buy-sell.jpg" alt="buy-sell-pic">
+          <img class="buy-sell" src="images\buy-sell.webp" alt="buy-sell-pic">
           <p>“Owning a home is a keystone of wealth… both financial affluence and emotional security.”
             –Suze Orman</p>
         </div>
         <div class="col-lg-4">
           <h2>Lease</h2>
-          <img class="lease" src="images\lease.jpg" alt="lease-pic" style="text-align:right" ;>
+          <img class="lease" src="images\lease.webp" alt="lease-pic" style="text-align:right" ;>
           <p>“A man travels the world over in search of what he needs and returns home to find it.”
             –George A. Moore</p>
         </div>
@@ -211,14 +211,14 @@
       <div class="row justify-content-center">
         <div class="col-lg-4">
           <h2>Commercial</h2>
-          <img class="commercial" src="images\commercial.jpg" alt="commercial-pic">
+          <img class="commercial" src="images\commercial.webp" alt="commercial-pic">
           <p> “It’s not about the money, though that’s nice to have.
             At the end of the day, it’s really about matching the right buyer to the right seller.
             We’re matchmakers—real estate matchmakers.” –Valerie Fitzgerald,</p>
         </div>
         <div class="col-lg-4">
           <h2>Invest</h2>
-          <img class="invest" src="images\invest.jpg" alt="invest-pic">
+          <img class="invest" src="images\invest.webp" alt="invest-pic">
           <p>“Real Estate provides the highest returns, the greatest values, and the least risk.”
             –Armstrong Williams</p>
         </div>
