commented fb code on index

--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
 
   <!--**********************************Facebook Messenger*********************************************-->
   <!-- Messenger Chat Plugin Code -->
-  <div id="fb-root"></div>
+  <!-- <div id="fb-root"></div> -->
 
   <!-- Your Chat Plugin code -->
-  <div id="fb-customer-chat" class="fb-customerchat">
+  <!-- <div id="fb-customer-chat" class="fb-customerchat">
   </div>
 
   <script>
@@ -84,7 +84,7 @@
       js.src = 'https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js';
       fjs.parentNode.insertBefore(js, fjs);
     }(document, 'script', 'facebook-jssdk'));
-  </script>
+  </script> -->
 
 
   <!--**************************************Top Container**************************************************-->
