--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
 
   <!--**********************************Facebook Messenger*********************************************-->
   <!-- Messenger Chat Plugin Code -->
-  <!-- <div id="fb-root"></div> -->
+  <div id="fb-root"></div>
 
   <!-- Your Chat Plugin code -->
-  <!-- <div id="fb-customer-chat" class="fb-customerchat">
+  <div id="fb-customer-chat" class="fb-customerchat">
   </div>
 
   <script>
@@ -84,7 +84,7 @@
       js.src = 'https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js';
       fjs.parentNode.insertBefore(js, fjs);
     }(document, 'script', 'facebook-jssdk'));
-  </script> -->
+  </script>
 
 
   <!--**************************************Top Container**************************************************-->
@@ -92,7 +92,7 @@
     <nav class="navbar fixed-top navbar-light navbar-expand-lg">
       <div class="container-fluid">
         <a class="navbar-brand d-flex justify-content-lg-start ps-5" href="index.html">
-          <img src="images\Malav_Logo.png" alt="logo" style="width:200px;">
+          <img class="malav-logo" src="images\Malav_Logo.png" alt="logo" >
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -268,7 +268,7 @@
   <!--**************************************Bottom Container**************************************************-->
   <div class="bottom-container">
     <a href="https://www.remaxtwincity.ca/agent/malav-panchal">
-      <img class="remax-logo" src="images\remax-logo.png" alt="remax-logo">
+      <img class="remax-logo pt-1" src="images\remax-logo.png" alt="remax-logo">
     </a>
     <hr>
     <a href="https://www.facebook.com/realtormalav/" class="fa fa-facebook"></a>
