--- a/reviews.html
+++ b/reviews.html
@@ -49,6 +49,11 @@
 
     <!-- Including CSS file at the bottom so that it takes preceedence over bootstrap styling -->
     <link rel="stylesheet" type="text/css" href="css/style.css">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.css">
+        
 </head>
 
 
@@ -189,87 +194,108 @@
 
     <!--**************************************Middle Container**************************************************-->
     <div class="mid-container">
-        <article class="mb-4">
-            <div class="container px-5 px-lg-6">
-                <div class="row gx-8 gx-lg-7 justify-content-center">
-                    <div class="blog-p col-md-11 col-lg-9 col-xl-8">
-                        <p>Never in all their history have men been able truly to conceive of the world as one: a single
-                            sphere, a
-                            globe, having the qualities of a globe, a round earth in which all the directions eventually
-                            meet, in
-                            which there is no center because every point, or none, is center — an equal earth which all
-                            men occupy as
-                            equals. The airman's earth, if free men make it, will be truly round: a globe in practice,
-                            not in theory.
-                        </p>
-                        <p>Science cuts two ways, of course; its products can be used for both good and evil. But
-                            there's no turning
-                            back from science. The early warnings about technological dangers also come from science.
-                        </p>
-                        <p>What was most significant about the lunar voyage was not that man set foot on the Moon but
-                            that they set
-                            eye on the earth.</p>
-                        <p>A Chinese tale tells of some men sent to harm a young girl who, upon seeing her beauty,
-                            become her
-                            protectors rather than her violators. That's how I felt seeing the Earth for the first time.
-                            I could not
-                            help but love and cherish her.</p>
-                        <p>For those who have seen the Earth from space, and for the hundreds and perhaps thousands more
-                            who will,
-                            the experience most certainly changes your perspective. The things that we share in our
-                            world are far more
-                            valuable than those which divide us.</p>
-                        <h2 class="section-heading">The Final Frontier</h2>
-                        <p>There can be no thought of finishing for ‘aiming for the stars.’ Both figuratively and
-                            literally, it is a
-                            task to occupy the generations. And no matter how much progress one makes, there is always
-                            the thrill of
-                            just beginning.</p>
-                        <p>There can be no thought of finishing for ‘aiming for the stars.’ Both figuratively and
-                            literally, it is a
-                            task to occupy the generations. And no matter how much progress one makes, there is always
-                            the thrill of
-                            just beginning.</p>
-                        <blockquote class="blockquote">The dreams of yesterday are the hopes of today and the reality of
-                            tomorrow.
-                            Science has not yet mastered prophecy. We predict too much for the next year and yet far too
-                            little for
-                            the next ten.</blockquote>
-                        <p>Spaceflights cannot be stopped. This is not the work of any one man or even a group of men.
-                            It is a
-                            historical process which mankind is carrying out in accordance with the natural laws of
-                            human development.
-                        </p>
-                        <h2 class="section-heading">Reaching for the Stars</h2>
-                        <p>As we got further and further away, it [the Earth] diminished in size. Finally it shrank to
-                            the size of a
-                            marble, the most beautiful you can imagine. That beautiful, warm, living object looked so
-                            fragile, so
-                            delicate, that if you touched it with a finger it would crumble and fall apart. Seeing this
-                            has to change
-                            a man.</p>
-                        <a href="#!"><img class="img-fluid" src="images\invest.webp" alt="..." /></a>
-                        <span class="caption text-muted">To go places and do things that have never been done before –
-                            that’s what
-                            living is all about.</span>
-                        <p>Space, the final frontier. These are the voyages of the Starship Enterprise. Its five-year
-                            mission: to
-                            explore strange new worlds, to seek out new life and new civilizations, to boldly go where
-                            no man has gone
-                            before.</p>
-                        <p>As I stand out here in the wonders of the unknown at Hadley, I sort of realize there’s a
-                            fundamental
-                            truth to our nature, Man must explore, and this is exploration at its greatest.</p>
-                        <p>
-                            Placeholder text by
-                            <a href="http://spaceipsum.com/">Space Ipsum</a>
-                            &middot; Images by
-                            <a href="https://www.flickr.com/photos/nasacommons/">NASA on The Commons</a>
-                        </p>
+        <div class="review-container rounded">
+            <div class="d-flex justify-content-center fas fa-heart"></div>
+            <p class="tag">Our customers love</p>
+            <h1 class="text-primary text-center head">What we do</h1>
+            <div class="owl-carousel owl-theme">
+                <div class="owl-item">
+                    <div class="card d-flex flex-column">
+                        <div class="mt-2"> <span class="fas fa-star active-star"></span> <span
+                                class="fas fa-star active-star"></span> <span class="fas fa-star active-star"></span>
+                            <span class="fas fa-star active-star"></span> <span
+                                class="fas fa-star-half-alt active-star"></span> </div>
+                        <div class="main font-weight-bold pb-2 pt-1">Great Service</div>
+                        <div class="testimonial"> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni
+                            dolores molestias veniam inventore itaque eius iure omnis, temporibus culpa id. </div>
+                        <div class="d-flex flex-row profile pt-4 mt-auto"> <img
+                                src="https://images.unsplash.com/photo-1531427186611-ecfd6d936c79?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
+                                alt="" class="rounded-circle">
+                            <div class="d-flex flex-column pl-2">
+                                <div class="name">Megan</div>
+                                <p class="text-muted designation">CEO of My Company</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="owl-item">
+                    <div class="card d-flex flex-column">
+                        <div class="mt-2"> <span class="fas fa-star active-star"></span> <span
+                                class="fas fa-star active-star"></span> <span class="fas fa-star active-star"></span>
+                            <span class="fas fa-star active-star"></span> <span
+                                class="fas fa-star-half-alt active-star"></span> </div>
+                        <div class="main font-weight-bold pb-2 pt-1">Great Service</div>
+                        <div class="testimonial"> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni
+                            dolores molestias veniam inventore itaque eius iure omnis, temporibus culpa id. </div>
+                        <div class="d-flex flex-row profile pt-4 mt-auto"> <img
+                                src="https://images.unsplash.com/photo-1531427186611-ecfd6d936c79?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
+                                alt="" class="rounded-circle">
+                            <div class="d-flex flex-column pl-2">
+                                <div class="name">Megan</div>
+                                <p class="text-muted designation">CEO of My Company</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="owl-item">
+                    <div class="card d-flex flex-column">
+                        <div class="mt-2"> <span class="fas fa-star active-star"></span> <span
+                                class="fas fa-star active-star"></span> <span class="fas fa-star active-star"></span>
+                            <span class="fas fa-star active-star"></span> <span
+                                class="fas fa-star-half-alt active-star"></span> </div>
+                        <div class="main font-weight-bold pb-2 pt-1">Great Service</div>
+                        <div class="testimonial"> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni
+                            dolores molestias veniam inventore itaque eius iure omnis, temporibus culpa id. </div>
+                        <div class="d-flex flex-row profile pt-4 mt-auto"> <img
+                                src="https://images.unsplash.com/photo-1531427186611-ecfd6d936c79?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
+                                alt="" class="rounded-circle">
+                            <div class="d-flex flex-column pl-2">
+                                <div class="name">Megan</div>
+                                <p class="text-muted designation">CEO of My Company</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="owl-item">
+                    <div class="card d-flex flex-column">
+                        <div class="mt-2"> <span class="fas fa-star active-star"></span> <span
+                                class="fas fa-star active-star"></span> <span class="fas fa-star active-star"></span>
+                            <span class="fas fa-star active-star"></span> <span
+                                class="fas fa-star-half-alt active-star"></span> </div>
+                        <div class="main font-weight-bold pb-2 pt-1">Great Service</div>
+                        <div class="testimonial"> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni
+                            dolores molestias veniam inventore itaque eius iure omnis, temporibus culpa id. </div>
+                        <div class="d-flex flex-row profile pt-4 mt-auto"> <img
+                                src="https://images.unsplash.com/photo-1531427186611-ecfd6d936c79?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
+                                alt="" class="rounded-circle">
+                            <div class="d-flex flex-column pl-2">
+                                <div class="name">Megan</div>
+                                <p class="text-muted designation">CEO of My Company</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="owl-item">
+                    <div class="card d-flex flex-column">
+                        <div class="mt-2"> <span class="fas fa-star active-star"></span> <span
+                                class="fas fa-star active-star"></span> <span class="fas fa-star active-star"></span>
+                            <span class="fas fa-star active-star"></span> <span
+                                class="fas fa-star-half-alt active-star"></span> </div>
+                        <div class="main font-weight-bold pb-2 pt-1">Great Service</div>
+                        <div class="testimonial"> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni
+                            dolores molestias veniam inventore itaque eius iure omnis, temporibus culpa id. </div>
+                        <div class="d-flex flex-row profile pt-4 mt-auto"> <img
+                                src="https://images.unsplash.com/photo-1531427186611-ecfd6d936c79?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
+                                alt="" class="rounded-circle">
+                            <div class="d-flex flex-column pl-2">
+                                <div class="name">Megan</div>
+                                <p class="text-muted designation">CEO of My Company</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
-        </article>
+        </div>
     </div>
 
 
@@ -292,6 +318,12 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
     </script>
+    <!-- Start of HubSpot Embed Code -->
+    <script type="text/javascript" id="hs-script-loader" async defer src="//js.hs-scripts.com/20507752.js"></script>
+    <!-- End of HubSpot Embed Code -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.2.1/owl.carousel.js"></script>
+    <script src="javascript\index.js" charset="utf-8"></script>
 </body>
 
 </html>
