fixed review page

--- a/reviews.html
+++ b/reviews.html
@@ -44,8 +44,9 @@
     <link href="https://fonts.googleapis.com/css2?family=PT+Serif&family=Sacramento&family=Slabo+27px&display=swap"
         rel="stylesheet">
 
-    <!-- This link is to use Social Media account logos -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- This link is to use Social Media account logos font awesome-->
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
+    <script src="https://kit.fontawesome.com/6f60e68d30.js" crossorigin="anonymous"></script>
 
     <!-- Including CSS file at the bottom so that it takes preceedence over bootstrap styling -->
     <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -53,7 +54,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.css">
-        
+
 </head>
 
 
@@ -193,103 +194,116 @@
 
 
     <!--**************************************Middle Container**************************************************-->
-    <div class="mid-container">
+    <div class="review-mid-container">
         <div class="review-container rounded">
-            <div class="d-flex justify-content-center fas fa-heart"></div>
+            <div class="d-flex justify-content-center fa fa-heart"></div>
             <p class="tag">Our customers love</p>
-            <h1 class="text-primary text-center head">What we do</h1>
+            <h1 class="text-primary text-center head" style="color: #003260!important; font-size: 3rem;">What we do</h1>
             <div class="owl-carousel owl-theme">
                 <div class="owl-item">
                     <div class="card d-flex flex-column">
-                        <div class="mt-2"> <span class="fas fa-star active-star"></span> <span
-                                class="fas fa-star active-star"></span> <span class="fas fa-star active-star"></span>
-                            <span class="fas fa-star active-star"></span> <span
-                                class="fas fa-star-half-alt active-star"></span> </div>
+                        <div class="mt-2"> 
+                            <span class="fa fa-star active-star"></span> 
+                            <span class="fa fa-star active-star"></span> 
+                            <span class="fa fa-star active-star"></span>
+                            <span class="fa fa-star active-star"></span> 
+                            <span class="fa fa-star active-star"></span>
+                        </div>
                         <div class="main font-weight-bold pb-2 pt-1">Great Service</div>
-                        <div class="testimonial"> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni
-                            dolores molestias veniam inventore itaque eius iure omnis, temporibus culpa id. </div>
+                        <div class="testimonial"> What an amazing experience working with Malav. He helped us got our
+                            first house in Canada. <br>
+                            Thanks again for your help! You are a Rockstar! </div>
                         <div class="d-flex flex-row profile pt-4 mt-auto"> <img
-                                src="https://images.unsplash.com/photo-1531427186611-ecfd6d936c79?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
+                                src="images/icons/woman-1.png"
                                 alt="" class="rounded-circle">
                             <div class="d-flex flex-column pl-2">
-                                <div class="name">Megan</div>
-                                <p class="text-muted designation">CEO of My Company</p>
+                                <div class="name">Neha Chauhan</div>
+                                <p class="text-muted designation">Buyer</p>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="owl-item">
                     <div class="card d-flex flex-column">
-                        <div class="mt-2"> <span class="fas fa-star active-star"></span> <span
-                                class="fas fa-star active-star"></span> <span class="fas fa-star active-star"></span>
-                            <span class="fas fa-star active-star"></span> <span
-                                class="fas fa-star-half-alt active-star"></span> </div>
-                        <div class="main font-weight-bold pb-2 pt-1">Great Service</div>
-                        <div class="testimonial"> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni
-                            dolores molestias veniam inventore itaque eius iure omnis, temporibus culpa id. </div>
+                        <div class="mt-2"> 
+                            <span class="fa fa-star active-star"></span> 
+                            <span class="fa fa-star active-star"></span> 
+                            <span class="fa fa-star active-star"></span>
+                            <span class="fa fa-star active-star"></span>
+                            <span class="fa fa-star active-star"></span>
+                            <!-- Uncomment this to put half star -->
+                            <!-- <span class="fa fa-star-half-alt active-star"></span>  -->
+                        </div>
+                        <div class="main font-weight-bold pb-2 pt-1">Professionalism</div>
+                        <div class="testimonial"> Found me an amazing home at great price. Malav's service is top of the line.
+                            <br> I would definetly recommended him to anyone who wants to deal with Real Estate </div>
                         <div class="d-flex flex-row profile pt-4 mt-auto"> <img
-                                src="https://images.unsplash.com/photo-1531427186611-ecfd6d936c79?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
+                                src="images/icons/woman-2.png"
                                 alt="" class="rounded-circle">
                             <div class="d-flex flex-column pl-2">
                                 <div class="name">Megan</div>
-                                <p class="text-muted designation">CEO of My Company</p>
+                                <p class="text-muted designation">Buyer</p>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="owl-item">
                     <div class="card d-flex flex-column">
-                        <div class="mt-2"> <span class="fas fa-star active-star"></span> <span
-                                class="fas fa-star active-star"></span> <span class="fas fa-star active-star"></span>
-                            <span class="fas fa-star active-star"></span> <span
-                                class="fas fa-star-half-alt active-star"></span> </div>
-                        <div class="main font-weight-bold pb-2 pt-1">Great Service</div>
-                        <div class="testimonial"> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni
-                            dolores molestias veniam inventore itaque eius iure omnis, temporibus culpa id. </div>
+                        <div class="mt-2"> <span class="fa fa-star active-star"></span>
+                            <span class="fa fa-star active-star"></span>
+                            <span class="fa fa-star active-star"></span>
+                            <span class="fa fa-star active-star"></span>
+                            <span class="fa fa-star active-star"></span> 
+                        </div>
+                        <div class="main font-weight-bold pb-2 pt-1">Humble person</div>
+                        <div class="testimonial"> Very prompt with his reply. Malav has patience to listern to all my questions. </div>
                         <div class="d-flex flex-row profile pt-4 mt-auto"> <img
-                                src="https://images.unsplash.com/photo-1531427186611-ecfd6d936c79?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
+                                src="images/icons/man-2.png"
                                 alt="" class="rounded-circle">
                             <div class="d-flex flex-column pl-2">
-                                <div class="name">Megan</div>
-                                <p class="text-muted designation">CEO of My Company</p>
+                                <div class="name">James</div>
+                                <p class="text-muted designation">Commercial</p>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="owl-item">
                     <div class="card d-flex flex-column">
-                        <div class="mt-2"> <span class="fas fa-star active-star"></span> <span
-                                class="fas fa-star active-star"></span> <span class="fas fa-star active-star"></span>
-                            <span class="fas fa-star active-star"></span> <span
-                                class="fas fa-star-half-alt active-star"></span> </div>
+                        <div class="mt-2"> <span class="fa fa-star active-star"></span>
+                            <span class="fa fa-star active-star"></span>
+                            <span class="fa fa-star active-star"></span>
+                            <span class="fa fa-star active-star"></span>
+                            <span class="fa fa-star active-star"></span>
+                        </div>
                         <div class="main font-weight-bold pb-2 pt-1">Great Service</div>
-                        <div class="testimonial"> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni
-                            dolores molestias veniam inventore itaque eius iure omnis, temporibus culpa id. </div>
+                        <div class="testimonial"> Found me a home for rent in less than 5 days. He even negotiated with rent.</div>
                         <div class="d-flex flex-row profile pt-4 mt-auto"> <img
-                                src="https://images.unsplash.com/photo-1531427186611-ecfd6d936c79?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
+                                src="images/icons/man-4.png"
                                 alt="" class="rounded-circle">
                             <div class="d-flex flex-column pl-2">
-                                <div class="name">Megan</div>
-                                <p class="text-muted designation">CEO of My Company</p>
+                                <div class="name">Neil</div>
+                                <p class="text-muted designation">Lease</p>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="owl-item">
                     <div class="card d-flex flex-column">
-                        <div class="mt-2"> <span class="fas fa-star active-star"></span> <span
-                                class="fas fa-star active-star"></span> <span class="fas fa-star active-star"></span>
-                            <span class="fas fa-star active-star"></span> <span
-                                class="fas fa-star-half-alt active-star"></span> </div>
-                        <div class="main font-weight-bold pb-2 pt-1">Great Service</div>
-                        <div class="testimonial"> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni
-                            dolores molestias veniam inventore itaque eius iure omnis, temporibus culpa id. </div>
+                        <div class="mt-2"> <span class="fa fa-star active-star"></span>
+                            <span class="fa fa-star active-star"></span>
+                            <span class="fa fa-star active-star"></span>
+                            <span class="fa fa-star active-star"></span>
+                            <span class="fa fa-star active-star"></span> 
+                        </div>
+                        <div class="main font-weight-bold pb-2 pt-1">Amazing Person</div>
+                        <div class="testimonial"> Amazing person to work with. Malav helped me with finding an Rental
+                            when there were not many available. <br> 10/10 </div>
                         <div class="d-flex flex-row profile pt-4 mt-auto"> <img
-                                src="https://images.unsplash.com/photo-1531427186611-ecfd6d936c79?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
+                                src="images/icons/man-2.png"
                                 alt="" class="rounded-circle">
                             <div class="d-flex flex-column pl-2">
-                                <div class="name">Megan</div>
-                                <p class="text-muted designation">CEO of My Company</p>
+                                <div class="name">Shell Kumar</div>
+                                <p class="text-muted designation">Lease</p>
                             </div>
                         </div>
                     </div>
