--- a/buying_tips.html
+++ b/buying_tips.html
@@ -92,7 +92,7 @@
     <nav class="navbar fixed-top navbar-light navbar-expand-lg">
       <div class="container-fluid">
         <a class="navbar-brand d-flex justify-content-lg-start ps-5" href="index.html">
-          <img src="images\Malav_Logo.png" alt="logo" style="width:200px;">
+          <img class="malav-logo" src="images\Malav_Logo.png" alt="logo">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
