--- a/buying_tips.html
+++ b/buying_tips.html
@@ -192,6 +192,19 @@
       <div class="container px-5 px-lg-6">
         <div class="row gx-8 gx-lg-7 justify-content-center">
           <div class="blog-p col-md-11 col-lg-9 col-xl-8">
+            <h2 class="section-heading">10 STEPS TO PURCHASING A HOME</h2>
+            <p style="line-height: 2;">
+              1. Choose a real estate agent that's right for you. <br>
+              2. Know your budget. <br>
+              3. Explore mortgage options, get pre-approved. <br>
+              4. Create a remax.ca account and browse homes online. <br>
+              5. Identify homes you like and schedule home tours. <br>
+              6. Make an offer. <br>
+              7. Get a home inspection. <br>
+              8. Close the deal. <br>
+              9. Update utilities and transfer services. <br>
+              10. Move into your new home! <br>
+            </p>
             <p>Never in all their history have men been able truly to conceive of the world as one: a single sphere, a
               globe, having the qualities of a globe, a round earth in which all the directions eventually meet, in
               which there is no center because every point, or none, is center — an equal earth which all men occupy as
